# CalVRPhysics

./: .exec.sh.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  LICENSE  Makefile  PhysicsLabZW.cpp  PhysicsLabZW.cpp~  PhysicsLabZW.h  PhysicsLabZW.h~  ScreenMonoChild.h  cmake_install.cmake  exec.sh  mycalvr.xml
CMakeScripts/: vrphysics_postBuildPhase.makeDebug  vrphysics_postBuildPhase.makeMinSizeRel  vrphysics_postBuildPhase.makeRelWithDebInfo  vrphysics_postBuildPhase.makeRelease
CalVR_Plugins.build/Debug/vrphysics.build/: Script-6DCE9556777242A5988C19B7.sh  dgph
CalVR_Plugins.build/Debug/vrphysics.build/Objects-normal/x86_64/: AssetDB-F600290A47D2E526.d  BlurPass-232A36CE5DFC1988.d  CVRKeyboardHandler-83A38D1A62150D38.d  CVRKeyboardHandler-83A38D1A62150D38.dia  Core-BE4DAB75F4A26E1E.d  Core-BE4DAB75F4A26E1E.dia  CustomFirstPersonManipulator-142CF522C0EC398A.d  CustomTrackballManipulator-92043645A00E0D68.d  CustomTrackballManipulator-92043645A00E0D68.dia  CustomVCoordFrameCB-47D885F174319B5D.d  CustomVCoordFrameCB-47D885F174319B5D.dia  DirectionalLight-E3AD412E71A9F317.d  DirectionalLightCallback-74A0FED8CFC2E426.d  DirectionalLightCallback-74A0FED8CFC2E426.dia  DirectionalLightGroup-7CE77812CD61C514.d  DirectionalLightingPass-FC1F9FAE9E4AD425.d  FinalPass-CD4AED2191B24E1C.d  FrustumData-52FB37723DC598C.d  GeometryPass-58CD7E173CCA1619.d  GeometryPass-58CD7E173CCA1619.dia  HDRPass-5EECF4BB93420518.d  ImportanceSamplingPass-E04C1EED0B520618.d  ImportanceSamplingPass-E04C1EED0B520618.dia  IndirectLightingPass-45CC4C4BC32A5E1D.d  KeyboardHandler-49D03C6B9FBA361B.d  KeyboardHandler-49D03C6B9FBA361B.dia  LightCallback-40F271645922451C.d  LightGroup-6E818834794AF527.d  LightGroupAnimationCallback-5F844688DC3B1529.d  LightHandler-6EB3D0F5B844898F.d  LightTrackBallManipulator-FEDDF4118E6AD625.d  LightingPass-4FD6AB5E4E2C524.d  Material-D4AFFF82D49A1319.d  Material-D4AFFF82D49A1319.dia  PhysicsLabZW-C2E0F2965FB21D22.d  PhysicsLabZW-C2E0F2965FB21D22.dia  PointLight-FE46A2444571C614.d  SSAOPass-4FEFB30FF632251A.d  Scene-CBEE5A609055E252.d  SceneEventCallback-6BC333D1892AF327.d  (+17 more)
Engine/: AssetDB.cpp  FinalPass.cpp  FinalPass.h  LightCallback.cpp  SSAOPass.cpp  SSAOPass.h  ScreenPass.cpp  finalPass.frag  gbuffer.frag  main.cpp  ssao.frag
Engine/assets/: simpleBox.dae  testGround.dae  testLight.dae  testShadow.dae  uu.dae
Engine/loader/: CVRKeyboardHandler.cpp  CVRKeyboardHandler.h  CustomTrackballManipulator.cpp  CustomTrackballManipulator.h  CustomVCoordFrameCB.cpp  CustomVCoordFrameCB.h  PhysicsLabZW.cpp  PhysicsLabZW.cpp~  PhysicsLabZW.h  Scene.cpp  Scene.h
Engine/resources/Testing/: Karen_Suit.dae  test2gi.dae  testTorus.dae  uuu.dae
Engine/shaders/: dirLight.frag  dirLight.vert  finalPass.frag  finalPass.vert  fluxMipmap.frag  fluxMipmap.vert  fxaa.frag  gBlur.vert  gBlurSSAOX.frag  gBlurSSAOY.frag  gBlurX.frag  gBlurY.frag  gbuffer.frag  gbuffer.vert  gbuffertex.frag  gbuffertex.vert  importanceSampling.frag  importanceSampling.vert  indirectLighting.frag  indirectLighting.vert  mainScene.frag  mainScene.vert  orthoDepthMap.frag  orthoDepthMap.vert  pointLightPass.frag  pointLightPass.vert  pointLightStencil.frag  pointLightStencil.vert  preprocess.py  rsm.frag  rsm.vert  skybox.vert  ssao.frag  ssao.vert  toneMapping.frag  toneMapping.vert
Engine/src/: AssetDB.cpp  Core.cpp  Core.h  DirectionalLight.h  DirectionalLightingPass.cpp  DirectionalLightingPass.h  GeometryPass.cpp  ImportanceSamplingPass.cpp  Material.cpp  PointLight.cpp  SSAOPass.cpp  ScreenPass.cpp  ShadowCallback.cpp  ShadowGroup.cpp  VPLGroup.cpp~  main.cpp
Robert/: BulletHandler.cpp  BulletHandler.h  CalVR.1.trace  CalVR.trace  NavHandler.cpp  NavHandler.h  ObjectFactory.cpp  ObjectFactory.h  PhysicsLab.cpp  PhysicsLab.h  trace.txt
